header nav hamburguer menu

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,32 @@
-<p>footer works!</p>
+<footer class="footer">
+  <div class="footer-inner">
+    <div class="footer-content">
+      <div class="footer-menu">
+        <div class="footer-menu1">
+          <p class="footer-menu-title">
+            <strong>Sobre Nosotros</strong>
+          </p>
+          <ul>
+            <li class="footer-menu1-item">
+              <a href="" class="footer-menu-link-button"
+                >Acerca de Detalles Angel's</a
+              >
+            </li>
+            <li class="footer-menu1-item">
+              <a href="" class="footer-menu-link-button">Nuestras tiendas</a>
+            </li>
+            <li class="footer-menu1-item">
+              <a href="" class="footer-menu-link-button">Orfertas de trabajo</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-menu2"></div>
+        <div class="footer-service"></div>
+      </div>
+      <div class="footer-social"></div>
+      <div class="footer-payment"></div>
+    </div>
+  </div>
+  <div class="footer-newsletter"></div>
+  <div class="footer-footer"></div>
+</footer>
