--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,22 +1,29 @@
 <header>
   <div class="logo">
-    <a href="#"><img src="/logo-long-da.svg" alt="logo" class="logo-img" /></a>
+    <a href="#"><img src="/logo-long-da.svg" alt="Logo" class="logo-img" /></a>
   </div>
 </header>
-<nav>
+
+<nav role="navigation">
   <div class="container-center">
-    <button class="open-nav" id="open"><i class="bi bi-list"></i></button>
+    <button class="open-nav" id="open" aria-label="Abrir menú de navegación">
+      <i class="bi bi-list"></i>
+    </button>
+
     <div class="nav-hamburguer" id="nav">
-      <button class="close-menu" id="close"><i class="bi bi-x"></i></button>
+      <button class="close-menu" id="close" aria-label="Cerrar menú de navegación">
+        <i class="bi bi-x"></i>
+      </button>
       <ul class="nav-list">
-        <li
-          class="dropdown" 
-          (mouseover)="showMenu()"
-          (mouseout)="hideMenu($event)"
-          id="prueba-fondo"
-        >
-          <a href="#">Productos</a>
-          <div id="dropdown-content" class="dropdown-content"><h1>hola, ya abrio</h1></div>
+        <li class="dropdown">
+          <a href="#" aria-haspopup="true" aria-expanded="false">Productos</a>
+          <div id="dropdown-content" class="dropdown-content">
+            <ul>
+              <li><a href="#">Subproducto 1</a></li>
+              <li><a href="#">Subproducto 2</a></li>
+              <li><a href="#">Subproducto 3</a></li>
+            </ul>
+          </div>
         </li>
         <li class="dropdown"><a href="#">Servicios</a></li>
         <li class="dropdown"><a href="#">Celebraciones</a></li>
@@ -24,20 +31,52 @@
         <li class="dropdown"><a href="#">Nosotros</a></li>
       </ul>
     </div>
+
     <div class="logo-nav-compact">
-      <a href="#"
-        ><img src="/logo-long-da.svg" alt="logo" class="logo-img"
-      /></a>
+      <a href="#"><img src="/logo-long-da.svg" alt="Logo compacto" class="logo-img" /></a>
     </div>
+
     <div class="icons-icon-svg">
-      <a href="#"><img src="/search.svg" alt="" /></a>
-      <a href=""><img src="/favorite.svg" alt="" /></a>
-      <a href=""><img src="/cart-shopping.svg" alt="" /></a>
-      <a href=""><img src="/user.svg" alt="" /></a>
+      <a href="#" aria-label="Buscar">
+        <img src="/search.svg" alt="Icono de búsqueda" />
+      </a>
+      <a href="#" aria-label="Favoritos">
+        <img src="/favorite.svg" alt="Icono de favoritos" />
+      </a>
+      <a href="#" aria-label="Carrito de compras">
+        <img src="/cart-shopping.svg" alt="Icono de carrito de compras" />
+      </a>
+
+      <!-- Mostrar enlace de inicio de sesión si no está autenticado -->
+      <a *ngIf="!isLogged()" href="/login" aria-label="Iniciar sesión">
+        <img src="/user.svg" alt="Icono de iniciar sesión" />
+      </a>
+
+      <!-- Mostrar menú del perfil si el usuario está autenticado -->
+      <div *ngIf="isLogged()" class="user-profile" (click)="toggleMenu()">
+        <div aria-label="Perfil de Usuario" class="user-info">
+          <img [src]="userProfile?.avatar ? '' + userProfile?.avatar : '/default-avatar.png'" 
+               alt="Avatar del Usuario" class="user-avatar">
+          <p>{{ (userProfile?.firstname || '') + ' ' + (userProfile?.lastname || '') || 'Usuario' }}</p>
+        </div>
+
+        <!-- Menú desplegable del perfil -->
+        <div [ngClass]="{'dropdown-menu': true, 'hidden': !menuVisible}">
+          <div class="user-info">
+            <img [src]="userProfile?.avatar ? '' + userProfile?.avatar : '/default-avatar.png'" 
+                 alt="Avatar del Usuario" class="user-avatar">
+            <p>{{ (userProfile?.firstname || '') + ' ' + (userProfile?.lastname || '') || 'Usuario' }}</p>
+          </div>
+          <button (click)="logout()" aria-label="Cerrar sesión" class="logout-btn">Cerrar sesión</button>
+        </div>
+      </div>
     </div>
   </div>
-  <span id="overlay" class="overlay"></span>
 </nav>
+
+
+
+
 
 <!-- <nav>
   <ul>
