add overlay nav hamburguer

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,6 +6,7 @@
 
 <nav role="navigation">
   <div class="container-center">
+    <span class="overlay" id="overlay"></span>
     <button class="open-nav" id="open" aria-label="Abrir menú de navegación">
       <i class="bi bi-list"></i>
     </button>
