--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -40,6 +40,24 @@ nav {
   align-items: center;
   width: 60%; /* Ajusta según lo necesites */
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s, visibility 0.3s;
+}
+
+.overlay.active {
+  visibility: visible;
+  opacity: 1;
+}
+
 nav ul li a {
   color: #241f21;
   text-decoration: none;
@@ -54,7 +72,7 @@ nav ul li a {
   display: flex;
   gap: 10px;
   justify-content: flex-end;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .icons-icon-svg a {
