--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<app-header />
 
-
-<main id="info-main">
-    <router-outlet />
+<div id="structure-web">
+  <app-header /> <!-- component header -->
+  <main id="info-main">
+      <router-outlet />
   </main>
+</div>
+
