footer responsive frontend

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,4 @@
-#structure-web {
-  display: grid;
-  min-width: 100dvh;
-  grid-template-rows: auto 1fr auto;
-  
-  scrollbar-width: none;
+#info-main{
+    width: 100vw;
 }
-
 
