--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,29 +2,88 @@
   <div class="footer-inner">
     <div class="footer-content">
       <div class="footer-menu">
-        <div class="footer-menu1">
-          <p class="footer-menu-title">
-            <strong>Sobre Nosotros</strong>
-          </p>
-          <ul>
-            <li class="footer-menu1-item">
-              <a href="" class="footer-menu-link-button"
-                >Acerca de Detalles Angel's</a
-              >
-            </li>
-            <li class="footer-menu1-item">
-              <a href="" class="footer-menu-link-button">Nuestras tiendas</a>
-            </li>
-            <li class="footer-menu1-item">
-              <a href="" class="footer-menu-link-button">Orfertas de trabajo</a>
-            </li>
-          </ul>
+        <div class="footer__menu-left">
+          <div class="footer-menu1">
+            <p class="footer-menu-title">
+              <strong>Sobre Nosotros</strong>
+            </p>
+            <ul>
+              <li class="footer-menu1-item">
+                <a href="" class="footer-menu-link-button"
+                  >Acerca de Detalles Angel's</a
+                >
+              </li>
+              <li class="footer-menu1-item">
+                <a href="" class="footer-menu-link-button">Nuestras tiendas</a>
+              </li>
+              <li class="footer-menu1-item">
+                <a href="" class="footer-menu-link-button"
+                  >Orfertas de trabajo</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="opening-hours">
+            <p class="footer-menu-title">
+              <strong>Horarios de atencion</strong>
+            </p>
+            <ul>
+              <li>Lunes a Sabado: 9:00am - 9:00pm</li>
+              <li>Domingo: Cerrado</li>
+            </ul>
+          </div>
+          <div class="footer-social">
+            <p class="footer__social-title">
+              <strong>Redes Sociales</strong>
+            </p>
+            <div class="footer__socia-icons">
+              <a href="#"><img src="/facebook-icon-footer.svg" alt="" /></a>
+              <a href="#"><img src="/instagram-icon-footer.svg" alt="" /></a>
+              <a href="#"
+                ><img
+                  src="/pinterest-icon-footer.svg"
+                  alt="/pinterest-icon-footer"
+              /></a>
+              <a href="#"
+                ><img src="/wpp-icon-footer.svg" alt="/pinterest-icon-footer"
+              /></a>
+            </div>
+          </div>
         </div>
-        <div class="footer-menu2"></div>
-        <div class="footer-service"></div>
+
+        <div class="footer__menu-rigth">
+          <div class="footer-menu2">
+            <p class="footer-menu-title">
+              <strong>Servicio</strong>
+            </p>
+            <ul>
+              <li><a href="#">Contacto</a></li>
+              <li><a href="#">Envio y pago</a></li>
+              <li><a href="#">Seguimiento</a></li>
+            </ul>
+          </div>
+          <div class="footer-service">
+            <p class="footer-menu-title">
+              <strong>Servicio al cliente</strong>
+            </p>
+            <a href="#" class="button__footer-customer-service">Contactanos</a>
+          </div>
+        </div>
       </div>
-      <div class="footer-social"></div>
-      <div class="footer-payment"></div>
+      <div class="footer__store-location">
+        <p class="footer__location-title">
+          <strong>Visitanos</strong>
+        </p>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.833716863986!2d-74.18552697132534!3d4.623738544061387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9e70d79c2059%3A0x4c49209e7125e9ee!2sGranero%20La%20Gran%20Despensa!5e0!3m2!1ses!2sco!4v1729887564837!5m2!1ses!2sco"
+          width="450"
+          height="300"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
     </div>
   </div>
   <div class="footer-newsletter"></div>
