--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 
-<div id="structure-web">
+
   <app-header /> <!-- component header -->
   <main id="info-main">
       <router-outlet />
   </main>
-</div>
+  <app-footer />
 
