--- a/src/app/components/productos-similares/productos-similares.component.html
+++ b/src/app/components/productos-similares/productos-similares.component.html
@@ -5,7 +5,7 @@
       <img *ngIf="producto.images.length > 0" [src]="producto.images[0]" alt="{{ producto.nombre }}">
      
       <h3>{{ producto.nombre }}</h3>
-      <p>{{ producto.descripcion }}</p>
+      <p>{{ producto.descripcionOne }}</p>
       <p class="price">{{ producto.precio | currency }}</p>
     </div>
   </div>
