--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,23 +12,12 @@
     </button>
 
     <div class="nav-hamburguer" id="nav">
-      <button
-        class="close-menu"
-        id="close"
-        aria-label="Cerrar menú de navegación"
-      >
+      <button class="close-menu" id="close" aria-label="Cerrar menú de navegación">
         <i class="bi bi-x"></i>
       </button>
       <ul class="nav-list">
         <li class="dropdown">
           <a href="#" aria-haspopup="true" aria-expanded="false">Productos</a>
-          <!-- <div id="dropdown-content" class="dropdown-content">
-            <ul>
-              <li><a href="#">Subproducto 1</a></li>
-              <li><a href="#">Subproducto 2</a></li>
-              <li><a href="#">Subproducto 3</a></li>
-            </ul>
-          </div> -->
         </li>
         <li class="dropdown"><a href="#">Servicios</a></li>
         <li class="dropdown"><a href="#">Celebraciones</a></li>
@@ -38,9 +27,7 @@
     </div>
 
     <div class="logo-nav-compact">
-      <a href="#"
-        ><img src="/logo-long-da.svg" alt="Logo compacto" class="logo-img"
-      /></a>
+      <a href="#"><img src="/logo-long-da.svg" alt="Logo compacto" class="logo-img" /></a>
     </div>
 
     <div class="icons-icon-svg">
@@ -51,40 +38,25 @@
         <img src="/favorite.svg" class="icon-header" alt="Icono de favoritos" />
       </a>
       <a href="#" aria-label="Carrito de compras">
-        <img
-          src="/cart-shopping.svg"
-          class="icon-header"
-          alt="Icono de carrito de compras"
-        />
+        <img src="/cart-shopping.svg" class="icon-header" alt="Icono de carrito de compras" />
       </a>
 
       <!-- Mostrar enlace de inicio de sesión si no está autenticado -->
       <a *ngIf="!isLogged()" href="/login" aria-label="Iniciar sesión">
-        <img
-          src="/user.svg"
-          class="icon-header"
-          alt="Icono de iniciar sesión"
-        />
+        <img src="/user.svg" class="icon-header" alt="Icono de iniciar sesión" />
       </a>
 
       <!-- Mostrar menú del perfil si el usuario está autenticado -->
       <div *ngIf="isLogged()" class="user-profile" (click)="toggleMenu()">
         <div aria-label="Perfil de Usuario" class="user-info">
           <img
-            [src]="
-              userProfile?.avatar
-                ? '' + userProfile?.avatar
-                : '/default-avatar.png'
-            "
-            alt="Avatar del Usuario"
-            class="user-avatar"
-          />
+        
+         [src]="userProfile?.avatar ? userProfile?.avatar : ''"
+        alt="Avatar del Usuario"
+        class="user-avatar"
+              />
           <p>
-            {{
-              (userProfile?.firstname || "") +
-                " " +
-                (userProfile?.lastname || "") || "Usuario"
-            }}
+            {{ (userProfile?.firstname || '') + ' ' + (userProfile?.lastname || '') || 'Usuario' }}
           </p>
         </div>
 
@@ -92,27 +64,16 @@
         <div [ngClass]="{ 'dropdown-menu': true, hidden: !menuVisible }">
           <div class="user-info">
             <img
-              [src]="
-                userProfile?.avatar
-                  ? '' + userProfile?.avatar
-                  : '/default-avatar.png'
-              "
-              alt="Avatar del Usuario"
-              class="user-avatar"
-            />
+  [src]="userProfile?.avatar ? userProfile?.avatar : ''"
+  alt="Avatar del Usuario"
+  class="user-avatar"
+/>
+
             <p>
-              {{
-                (userProfile?.firstname || "") +
-                  " " +
-                  (userProfile?.lastname || "") || "Usuario"
-              }}
+              {{ (userProfile?.firstname || '') + ' ' + (userProfile?.lastname || '') || 'Usuario' }}
             </p>
           </div>
-          <button
-            (click)="logout()"
-            aria-label="Cerrar sesión"
-            class="logout-btn"
-          >
+          <button (click)="logout()" aria-label="Cerrar sesión" class="logout-btn">
             Cerrar sesión
           </button>
         </div>
@@ -120,6 +81,7 @@
     </div>
   </div>
 </nav>
+
 
 <!-- <nav>
   <ul>
