--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,9 +11,17 @@
               <label for="exampleInputEmail1" class="form-label">Email</label>
               <input type="email" class="form-control" formControlName="email" />
             </div>
-            <div class="mb-3">
+            <div class="mb-3 position-relative">
               <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-              <input type="password" class="form-control" formControlName="password" />
+              <input 
+                type="password" 
+                class="form-control" 
+                formControlName="password" 
+                [type]="showPassword ? 'text' : 'password'"
+              />
+              <button type="button" (click)="togglePasswordVisibility()" class="position-absolute end-0 top-0 mt-2 me-3">
+                <i [ngClass]="showPassword ? 'bi bi-eye-slash' : 'bi bi-eye'"></i>
+              </button>
             </div>
 
             <!-- Mostrar mensaje de error -->
