add banner home

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,6 @@
-<header>
+<span class="overlay" id="overlay"></span>
+<div id="conatiner-header-nav">
+  <header id="header-sticky">
   <div class="logo">
     <a href="#"><img src="/logo-long-da.svg" alt="Logo" class="logo-img" /></a>
   </div>
@@ -6,7 +8,6 @@
 
 <nav role="navigation">
   <div class="container-center">
-    <span class="overlay" id="overlay"></span>
     <button class="open-nav" id="open" aria-label="Abrir menú de navegación">
       <i class="bi bi-list"></i>
     </button>
@@ -81,8 +82,7 @@
     </div>
   </div>
 </nav>
-
-
+</div>
 <!-- <nav>
   <ul>
       <li class="dropdown">
