--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -12,6 +12,22 @@ header {
   align-items: center;
 }
 
+#conatiner-header-nav {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  z-index: 1500;
+  background-color: rgba(255, 255, 255, 0.8); /* Fondo semi-transparente */
+  backdrop-filter: blur(15px); /* Efecto blur */
+  -webkit-backdrop-filter: blur(15px);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+header,
+nav {
+  transition: all 0.3s ease-in-out; /* Ajusta el tiempo y el tipo de animación según prefieras */
+}
+
 .logo-img {
   width: 200px;
 }
@@ -41,12 +57,13 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vh;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.5);
   visibility: hidden;
   opacity: 0;
   transition: opacity 0.3s, visibility 0.3s;
+  z-index: 1500;
 }
 
 .overlay.active {
@@ -226,6 +243,19 @@ nav .nav-hamburguer.visible {
     padding: 10px;
   }
 
+  #conatiner-header-nav {
+    background-color: #f5f6f3;
+  }
+
+
+  #nav-sticky {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+  }
+
+
   nav {
     padding: 10px;
   }
@@ -280,6 +310,7 @@ nav .nav-hamburguer.visible {
     top: 0;
     left: 0;
     bottom: 0;
+    height: 100vh;
     position: absolute;
     padding: 1rem;
     background-color: #ffffff;
