--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,5 @@
 <div class="home-container">
-  
-  
-  <app-producto-destacado></app-producto-destacado>
-
+  <app-banner />
   <app-section-categories />
-  
- 
+  <app-producto-destacado />
 </div>
