rutas de header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,12 +18,9 @@
       </button>
       <ul class="nav-list">
         <li class="dropdown">
-          <a href="#" aria-haspopup="true" aria-expanded="false">Productos</a>
+          <a href="/products/category/id" aria-haspopup="true" aria-expanded="false">Productos</a>
         </li>
-        <li class="dropdown"><a href="#">Servicios</a></li>
-        <li class="dropdown"><a href="#">Celebraciones</a></li>
-        <li class="dropdown"><a href="#">Promociones</a></li>
-        <li class="dropdown"><a href="#">Nosotros</a></li>
+        <li class="dropdown"><a href="/category">Categorias</a></li>
       </ul>
     </div>
 
@@ -32,9 +29,6 @@
     </div>
 
     <div class="icons-icon-svg">
-      <a href="#" aria-label="Buscar">
-        <img src="/search.svg" class="icon-header" alt="Icono de búsqueda" />
-      </a>
       <a href="#" aria-label="Favoritos">
         <img src="/favorite.svg" class="icon-header" alt="Icono de favoritos" />
       </a>
