--- a/src/app/components/card-product/card-product.component.html
+++ b/src/app/components/card-product/card-product.component.html
@@ -1,32 +1,29 @@
 <div class="card-product">
-    <div class="product-card-image">
-      <img
-        src="https://plus.unsplash.com/premium_photo-1663839412026-51a44cfadfb8?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y3VtcGxlYSVDMyVCMW9zfGVufDB8fDB8fHww"
-        alt="pastel"
-      />
-      <!-- imagen del producto-->
-      <button>
-        <i> <img src="/cart-shopping.svg" alt=""></i> <!-- cambiar img para imagen desde api-->
-        <!-- icono de carrito-->
-      </button>
-      <!-- boton para carrito-->
-    </div>
-    <div class="card-info">
-      <div>
-        <p>cumpleaños</p>
-      </div>
-      <!-- nombre de la categoria-->
-      <div>
-        <h1>pastel de tres leches</h1>
-      </div>
-      <!-- nombre del producto-->
-      <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-      </div>
-      <!-- descripcion-->
-      <div>
-        <span>$30.000</span>
-      </div>
-      <!-- precio -->
-    </div>
+  <div class="product-card-image">
+    <img [src]="producto.image" />
+    <!-- imagen del producto-->
+    <button>
+      <i> <img src="/cart-shopping.svg" alt="" /></i>
+      <!-- icono de carrito-->
+    </button>
+    <!-- boton para carrito-->
   </div>
+  <div class="card-info">
+    <div>
+      <p>{{producto.categoria.name}}</p>
+    </div>
+    <!-- nombre de la categoria-->
+    <div>
+      <h1>{{producto.nombre}}</h1>
+    </div>
+    <!-- nombre del producto-->
+    <div>
+      <p>{{producto.descripcionOne}}</p>
+    </div>
+    <!-- descripcion-->
+    <div>
+      <span>{{producto.precio}}</span>
+    </div>
+    <!-- precio -->
+  </div>
+</div>
