receiving new push from nicolas

--- a/src/app/pages/producto/producto.component.html
+++ b/src/app/pages/producto/producto.component.html
@@ -27,7 +27,7 @@
         <input type="number" id="quantity" [(ngModel)]="quantity" min="1" [max]="product.stock !== undefined ? product.stock : 1" />
       </div>
 
-      <button class="add-to-cart" (click)="addToCart()">Añadir al Carrito</button>
+      <!-- <button class="add-to-cart" (click)="addToCart()">Añadir al Carrito</button> -->
 
       <!-- Métodos de pago justo debajo del botón -->
       
